@@ -1,14 +1,32 @@
+FROM ubuntu:20.04
 
-FROM maven:latest
+# Install OpenJDK 21 and required libraries for JavaFX
+RUN apt-get update && apt-get install -y \
+    openjdk-21-jdk \
+    libgtk-3-0 \
+    libasound2 \
+    libxext6 \
+    libxrender1 \
+    libxtst6 \
+    libxxf86vm1 \
+    libgl1-mesa-glx \
+    libgl1-mesa-dri \
+    x11-apps \
+    && rm -rf /var/lib/apt/lists/*
 
+# Install OpenJFX dependencies
+RUN apt-get update && apt-get install -y \
+    openjfx \
+    && rm -rf /var/lib/apt/lists/*
 
+# Set the working directory
 WORKDIR /app
 
-COPY pom.xml /app/
+# Copy the fat JAR into the container
+COPY target/ohjelmistotuotanto.jar /app/ohjelmistotuotanto.jar
 
+# Set the DISPLAY environment variable to use the host's display server
+ENV DISPLAY=host.docker.internal:0.0
 
-COPY . /app
-
-# RUN mvn package
-
-# CMD ["java", "-jar", "target/ohjelmistotuotanto.jar"]
+# Run the JavaFX application
+ENTRYPOINT ["java", "--module-path", "/usr/share/openjfx/lib", "--add-modules", "javafx.controls,javafx.fxml", "-jar", "/app/ohjelmistotuotanto.jar"]
